--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -19,7 +19,7 @@
 
        <div id="Logo">
             <a href="../index.html">
-                <img src="../img/logoWeb.png" alt="logoAlmaViva">
+                <img src="../img/logoWeb.png" width="170px" height="auto" alt="logoAlmaViva">
             </a>                    
         </div>
 
