--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,7 +22,7 @@
         
         <div id="Logo">
             <a href="../index.html">
-                <img src="../img/logoWeb.png" width="" alt="logoAlmaViva">
+                <img src="../img/logoWeb.png" width="170px" height="auto" alt="logoAlmaViva">
             </a>                    
         </div>
 
